@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.playserial.cz"
        name="PlaySerialCZ"
-       version="1.0.1"
+       version="1.0.2"
        provider-name="Ivo Brhel">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.2.8"/>
+    <import addon="script.module.stream.resolver" version="1.3.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
