@@ -1,6 +1,6 @@
 # -*- coding: UTF-8 -*-
 #/*
-# *      Copyright (C) 2011 Libor Zoubek
+# *      Copyright (C) 2011 Ivo Brhel
 # *
 # *
 # *  This Program is free software; you can redistribute it and/or modify
@@ -25,77 +25,67 @@ import util,resolver
 
 from provider import ContentProvider
 
-class NastojakaContentProvider(ContentProvider):
+class PlayserialContentProvider(ContentProvider):
 
 	def __init__(self,username=None,password=None,filter=None):
-		ContentProvider.__init__(self,'nastojaka.cz','http://www.nastojaka.cz/',username,password,filter)
+		ContentProvider.__init__(self,'playserial.cz','http://playserial.cz/',username,password,filter)
 		opener = urllib2.build_opener(urllib2.HTTPCookieProcessor(cookielib.LWPCookieJar()))
 		urllib2.install_opener(opener)
 
 	def capabilities(self):
-		return ['search','resolve','cagegories']
+		return ['resolve','cagegories']
 
-	def search(self,keyword):
-		data = util.post(self.base_url+'vyhledavani',{'btnsearch':'OK','txtsearch':keyword});
-		return self.show(data)
 
 	def categories(self):
 		result = []
-		
-		item = self.dir_item()
-		item['title'] = '$30005'
-		item['url'] = 'scenky/?sort=date'
-		result.append(item)
-		
-		item = self.dir_item()
-		item['title'] = '$30006'
-		item['url'] = 'scenky/?sort=performer'
-		result.append(item)
-
-		item = self.dir_item()
-		item['title'] = '$30007'
-		item['url'] = 'scenky/?sort=rating'
-		result.append(item)
+		data = util.substr(util.request(self.base_url),'<ul>','</ul>')
+		pattern = '<li><a href=\'(?P<url>[^\']+)[^>]+>(?P<name>[^<]+)' 
+		for m in re.finditer(pattern,data,re.IGNORECASE | re.DOTALL ):
+			item = self.dir_item()
+			item['title'] = m.group('name')
+			item['url'] = '#cat#'+m.group('url')
+			result.append(item)
 		return result
 		
-	def list(self,url):
-		return self.show(util.request(self._url(url)))
-
+	def episodes(self,page):
+		result = []
+		data = util.substr(page,'<div class=\'obsah\'>','</div>')
+		pattern = '<a href=\'(?P<url>[^\']+)[^>]+>(?P<name>[^<]+)' 
+		for m in re.finditer(pattern,data,re.IGNORECASE | re.DOTALL ):
+			item = self.dir_item()
+			item['title'] = m.group('name')
+			item['url'] = '#show#'+m.group('url')
+			self._filter(result,item)
+		return result
 
 	def show(self,page):
 		result = []
-		data = util.substr(page,'<div id=\"search','<hr>')
-		for m in re.finditer('<div.+?class=\"scene[^>]*>.+?<img src="(?P<img>[^\"]+)\" alt=\"(?P<name>[^\"]+).+?<div class=\"sc-name\">(?P<author>[^<]+).+?<a href=\"(?P<url>[^\"]+)',data,re.IGNORECASE | re.DOTALL ):
-			name = "%s (%s)" % (m.group('name'),m.group('author'))
+		data = util.substr(page,'<div class=\'obsah\'','</div>')
+		for m in re.finditer('<a href=\'(?P<url>[^\']+)[^>]+>(?P<name>[^<]+)',data,re.IGNORECASE | re.DOTALL ):
+			name = "%s" % (m.group('name'))
 			item = self.video_item()
-			item['title'] = name
 			item['url'] = m.group('url')
-			item['img'] = m.group('img')
+			item['title'] = name
 			self._filter(result,item)
-	
-		data = util.substr(page,'class=\"pages\">','</div>')
-		next = re.search('<a href=\"(?P<url>[^\"]+)\"[^<]+<img src=\"/images/page-right.gif',data)
-		prev = re.search('<a href=\"(?P<url>[^\"]+)\"[^<]+<img src=\"/images/page-left.gif',data)
-		if prev:
-			item = self.dir_item()
-			item['type'] = 'prev'
-			item['url'] = prev.group('url')
-			result.append(item)
-		if next:
-			item = self.dir_item()
-			item['type'] = 'next'
-			item['url'] = next.group('url')
-			result.append(item)
 		return result
+	
+	def list(self,url):
+		if url.find('#show#') == 0:
+                        return self.show(util.request(self._url(url[6:])))
+		if url.find('#cat#') == 0:
+                        return self.episodes(util.request(self._url(url[5:])))
+		else:
+                        raise Expception("Invalid url, I do not know how to list it :"+url)
+
 
 	def resolve(self,item,captcha_cb=None,select_cb=None):
 		item = item.copy()
 		url = self._url(item['url'])
 		data = util.request(url)
-		data = util.substr(data,'<div class=\"video','</div>')
-		resolved = resolver.findstreams(data,['<embed( )src=\"(?P<url>[^\"]+)'])
-		result = []
-                for i in resolved:
+		data = util.substr(data,'<div class=\'obsah\'','</div>')
+		resolved = resolver.findstreams(data,['[\"|\']+(?P<url>http://[^\"|\']+)','flashvars=\"file=(?P<url>[^\"]+)'])
+                result = []
+		for i in resolved:
                         item = self.video_item()
                         item['title'] = i['name']
                         item['url'] = i['url']
@@ -106,4 +96,6 @@ class NastojakaContentProvider(ContentProvider):
                         return result[0]
                 elif len(result) > 1 and select_cb:
                         return select_cb(result)
+
+
 
