@@ -1,3 +1,5 @@
+[B]1.0.2:[/B]
+- migrace na ContentProvider API
 [B]1.0.1:[/B]
 - povolen Usage Tracker
 [B]1.0.0:[/B]
